[package]
name = "bevy_mod_lockdown"
description = "bevy_mod_lockdown is a library to reduce the attack surface your application offers."
categories = ["game-development"]
keywords = ["bevy", "gamedev"]
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Frederik Terstappen <freterstappen@gmail.com>"]
repository = "https://github.com/FrTerstappen/bevy_mod_lockdown"
homepage = "https://github.com/FrTerstappen/bevy_mod_lockdown"
documentation = "https://docs.rs/bevy_mod_lockdown"
readme = "README.md"
edition = "2021"
rust-version = "1.76.0"
exclude = []

[features]
default = ["feature_warning"]
feature_warning = []
filesystem = ["dep:landlock"]
network = []
privilege = [
    "dep:windows",
    "windows?/Win32_System_Threading",
    "windows?/Win32_Security",
    "windows?/Win32_Foundation",
    "dep:nix",
    "nix?/user",
]
system_call = []
egui = ["dep:egui"]

[dependencies]
bevy = { version = "0.14.0", default-features = false }
egui = { version = "0.28.1", default-features = false, optional = true }

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(any(target_os = "android", target_os = "ios", target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.29.0", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", optional = true }

[dev-dependencies]
bevy = { version = "0.14.0", default-features = true }
bevy_egui = { version = "0.28.0", default-features = false, features = [
    "default_fonts",
    "render",
] }

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["egui"]

[workspace.lints.rust]
unsafe_code = "deny"
unused = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
deprecated-in-future = "deny"
unused-crate-dependencies = "warn"
unused-qualifications = "warn"
missing_debug_implementations = "deny"

rust_2018_idioms = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = "deny"
